<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkboxLED1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:text="@string/tgLED"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/rx"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readBuffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/ReadBuffer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/status"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/BluetoothStatus" />
    </LinearLayout>

    <Button
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_BT_ON" />

    <Button
        android:id="@+id/off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_BT_OFF" />

    <Button
        android:id="@+id/PairedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pared_devices" />

    <Button
        android:id="@+id/discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_discover" />

    <ListView
        android:id="@+id/devicesListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice" />

</LinearLayout>